#98 fixing the height and width of the cropped-image

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -472,7 +472,7 @@ ul > li {
 .cropped-image {
   width: 480px;
   max-width: 100%;
-  height: 380px;
-  max-height: 60%;
+  height: 360px;
+  max-height: auto;
   border: 0px solid #D6AD60;
 }
